[package]
name = "cuda-static-map"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "kernels",
    "xtask",
]

[dependencies]
cuda_std = { path = "rust-cuda/crates/cuda_std" }
cust = { path = "rust-cuda/crates/cust" }
cuda-static-map-kernels = { path = "kernels" }

[build-dependencies]
cuda_builder = { path = "rust-cuda/crates/cuda_builder", default-features = false, features = ["rustc_codegen_nvvm"] }

[features]
test-kernels = []
