[package]
name = "cuda-static-map-kernels"
version = "0.1.0"
edition = "2024"

[build-dependencies]
primal = "0.3"

[dependencies]
cuda_std = { path = "../rust-cuda/crates/cuda_std" }
cust_core = { path = "../rust-cuda/crates/cust_core" }
paste = "1.0"

[target.'cfg(not(target_arch = "nvptx64"))'.dependencies]
cust = { path = "../rust-cuda/crates/cust" }
cust_raw = { path = "../rust-cuda/crates/cust_raw", default-features = false, features = ["driver"] }

[lib]
crate-type = ["cdylib", "rlib"]

